# ethereum_ssz

./: .gitignore  Cargo.toml  Makefile  README.md  bump-version.sh
.github/workflows/: release.yml  test-suite.yml
ssz/: Cargo.toml
ssz/src/: bitfield.rs  bitvector_dynamic.rs  context_deserialize.rs  decode.rs  encode.rs  legacy.rs  lib.rs  union_selector.rs
ssz/src/bitfield/: bitvector_dynamic.rs  progressive.rs
ssz/src/decode/: impls.rs  reverse_ssz_decoder.rs
ssz/src/encode/: impls.rs
ssz/tests/: tests.rs
ssz_derive/: Cargo.toml
ssz_derive/src/: lib.rs
ssz_derive/tests/: tests.rs
