[package]
name = "ethereum_ssz"
version = "0.9.1"
edition = "2021"
description = "SimpleSerialize (SSZ) as used in Ethereum"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/sigp/ethereum_ssz"
documentation = "https://docs.rs/ethereum_ssz"
keywords = ["ethereum"]
categories = ["cryptography::cryptocurrencies"]

[lib]
name = "ssz"

[dev-dependencies]
alloy-primitives = { version = "1.0", features = ["getrandom"] }
ethereum_ssz_derive = { version = "0.9.0", path = "../ssz_derive" }

[dependencies]
alloy-primitives = "1.0"
ethereum_serde_utils = "0.8.0"
smallvec = { version = "1.6.1", features = ["const_generics"] }
itertools = "0.13.0"
serde = "1.0.0"
serde_derive = "1.0.0"
typenum = "1.12.0"
arbitrary = { version = "1.0", features = ["derive"], optional = true }

[features]
arbitrary = ["dep:arbitrary", "alloy-primitives/arbitrary"]
