[package]
name = "ethereum_ssz"
description = "SimpleSerialize (SSZ) as used in Ethereum"
documentation = "https://docs.rs/ethereum_ssz"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "ssz"

[features]
arbitrary = ["dep:arbitrary", "alloy-primitives/arbitrary"]
context_deserialize = ["dep:context_deserialize"]

[dependencies]
alloy-primitives = "1"
ethereum_serde_utils = "0.8"
smallvec = { version = "1", features = ["const_generics"] }
itertools = "0.14"
serde = "1"
serde_derive = "1"
typenum = "1"
arbitrary = { version = "1", features = ["derive"], optional = true }
context_deserialize = { version = "0.2", optional = true }

[dev-dependencies]
alloy-primitives = { version = "1", features = ["getrandom"] }
ethereum_ssz_derive = { version = "0.10", path = "../ssz_derive" }
serde_json = "1"
