[package]
name = "ethereum_ssz_derive"
version = "0.10.1"
edition = "2021"
description = "Procedural derive macros to accompany the ethereum_ssz crate"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/sigp/ethereum_ssz"
documentation = "https://docs.rs/ethereum_ssz_derive"
keywords = ["ethereum"]
categories = ["cryptography::cryptocurrencies"]

[lib]
name = "ssz_derive"
proc-macro = true

[dependencies]
syn = "2"
proc-macro2 = "1"
quote = "1"
darling = "0.23"

[dev-dependencies]
ethereum_ssz = { path = "../ssz" }
