[package]
name = "ethereum_ssz_derive"
description = "Procedural derive macros to accompany the ethereum_ssz crate"
documentation = "https://docs.rs/ethereum_ssz_derive"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "ssz_derive"
proc-macro = true

[dependencies]
syn = "2"
proc-macro2 = "1"
quote = "1"
darling = "0.23"

[dev-dependencies]
ethereum_ssz.workspace = true
